--- a/index.html
+++ b/index.html
@@ -171,7 +171,8 @@
          </section>
       </main>
       <footer>
-
+         <p>Created for the Purpose of Maintaining Meeting Notes - 2025</p>
+         <p>Thanks for visiting</p>
       </footer>
    </body>
 
